# APK-reconstruction

./: .gitignore  COMPREHENSIVE_REVERSE_ENGINEERING_REPORT.md  README.md  build_exe.py  launch.bat  launch.py  pyproject.toml  requirements.txt
il2cpp_recovery_studio/: IL2CPP_Recovery_Studio.spec  README.md  __init__.py  __main__.py  extract_all.py  pyproject.toml
il2cpp_recovery_studio/ai_export/: __init__.py  exporter.py  flutter_codegen.py  renderer.py  token_extractor.py
il2cpp_recovery_studio/analysis/: __init__.py  il2cpp_detector.py  models.py
il2cpp_recovery_studio/apk/: __init__.py  binary_xml.py  models.py  parser.py
il2cpp_recovery_studio/assets/: __init__.py  analyzer.py  models.py
il2cpp_recovery_studio/binary/: __init__.py  analyzer.py  models.py
il2cpp_recovery_studio/core/: __init__.py  config.py  exceptions.py  logging.py
il2cpp_recovery_studio/crossref/: __init__.py  engine.py  models.py
il2cpp_recovery_studio/docs_gen/: __init__.py  generator.py
il2cpp_recovery_studio/exporters/: __init__.py  exporters.py
il2cpp_recovery_studio/ghidra/: __init__.py  analyzer.py  engine.py  models.py  report.py
il2cpp_recovery_studio/graphs/: __init__.py  generator.py  models.py
il2cpp_recovery_studio/gui/: __init__.py  app.py  styles.py
il2cpp_recovery_studio/metadata/: __init__.py  exporters.py  models.py  parser.py
il2cpp_recovery_studio/methodmap/: __init__.py  engine.py  models.py
il2cpp_recovery_studio/network/: __init__.py  analyzer.py  models.py
il2cpp_recovery_studio/performance/: __init__.py  utils.py
il2cpp_recovery_studio/plugins/: __init__.py  manager.py
il2cpp_recovery_studio/rebuild/: __init__.py  pipeline.py
il2cpp_recovery_studio/reconstructor/: __init__.py  engine.py
il2cpp_recovery_studio/recovery/: __init__.py  database.py  models.py  orchestrator.py  parsers.py  tool_registry.py
il2cpp_recovery_studio/scripts/: rebuild_and_test.bat  rebuild_and_test.py
il2cpp_recovery_studio/search/: __init__.py  engine.py  models.py
(+3467 files in other folders)
