[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "il2cpp-recovery-studio"
version = "1.0.0"
description = "Unity APK asset extraction, editing, and modded APK rebuild tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IL2CPP Recovery Studio Team"},
]

dependencies = [
    "UnityPy>=1.5.0",
    "Pillow>=9.0",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
dev = [
    "pytest>=8.0",
]

[project.scripts]
il2cpp-recovery-studio = "il2cpp_recovery_studio.__main__:main"

[tool.setuptools.packages.find]
include = ["il2cpp_recovery_studio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
