[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "il2cpp-recovery-studio"
version = "1.0.0"
description = "Production-quality Unity IL2CPP APK recovery and analysis tool"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "IL2CPP Recovery Studio Team"},
]

dependencies = [
    "lief>=0.14",
    "rich>=13.0",
    "PyYAML>=6.0",
    "networkx>=3.0",
]

[project.scripts]
il2cpp-recovery-studio = "il2cpp_recovery_studio.__main__:main"

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py312"
line-length = 100
